# puate

./: README.md  pyproject.toml  requirements-ihdp.txt  requirements.txt
notebooks/: Figure 2.ipynb  Figure 3.ipynb  Figure 4.ipynb  Figure 5.ipynb  Figure 6.ipynb  README.md  Table 1.ipynb  Table 2.ipynb  Table 3.ipynb  Table 4.ipynb  Table 5.ipynb
scripts/: run_ihdp.py  run_synthetic.py  summarize_results.py
src/puate/: __init__.py  data.py  estimators.py  models.py  paper_reproduction.py  reporting.py
tests/: test_smoke.py
